tests/transpiler/x/clj/group_by_conditional_sum.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/transpiler/x/clj/group_by_conditional_sum.clj:10:68).
Unable to resolve symbol: g in this context

Full report at:
/tmp/clojure-10826704946178279524.edn
