tests/transpiler/x/clj/group_by_conditional_sum.clj
;; Generated by Mochi v0.10.32 on 2025-07-21 12:29:27 GMT+7
(ns main)

(require 'clojure.set)

(defrecord Anon1 [cat val flag])

(def items [{:cat "a" :val 10 :flag true} {:cat "a" :val 5 :flag false} {:cat "b" :val 20 :flag true}])

(def result (let [g_groups (for [[k rows] (group-by :key (for [i items :let [k (:cat i)]] {:key k :item i})) :let [g {:key k :items (map :item rows)}]] g)] (for [g (sort-by (fn [g] (:key g)) g_groups)] {:cat (:key g) :share (/ (reduce + 0 (for [x (:items g)] (if (:flag x) (:val x) 0))) (reduce + 0 (for [x (:items g)] (:val x))))})))

(defn -main []
  (println result))

(-main)
